# basic_ros2Lifecycle

./: .gitignore  README.md
src/LifecycleNodeExample/: package.xml  setup.cfg  setup.py
src/LifecycleNodeExample/LifecycleNodeExample/: lifecycle_node.py
src/custom_interfaces/: CMakeLists.txt  package.xml
src/custom_interfaces/srv/: CheckNode.srv
src/lifecycle_listener/: package.xml  setup.cfg  setup.py
src/lifecycle_listener/lifecycle_listener/: listener.py
src/lifecycle_talker/: package.xml  setup.cfg  setup.py
src/lifecycle_talker/lifecycle_talker/: talker.py
src/lifecycle_talker/test/: test_lifecycle.py
src/lifecycle_talker2/: package.xml  setup.cfg  setup.py
src/lifecycle_talker2/launch/: lifecycle_example.launch.py
src/lifecycle_talker2/lifecycle_talker2/: lifecycle_node.py
src/manager/: package.xml  setup.py
src/manager/launch/: allinone.launch.py  allinone_debug.launch.py  second_process.launch.py
src/manager/manager/: manager.py  manager_node.py  manager_node2.py  manager_node_test.py  nodechecker.py
src/manager/manager/manager_pkg/: manager.py  manager_2.py
