<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>manager</name>
  <version>0.20.3</version>
  <description>Package containing demos for rclpy lifecycle implementation</description>

  <maintainer email="audrow@openrobotics.org">Audrow Nash</maintainer>
  <maintainer email="michael.jeronimo@openrobotics.org">Michael Jeronimo</maintainer>

  <license>Apache License 2.0</license>

  <author email="ivanpauno@ekumenlabs.com">Ivan Santiago Paunovic</author>

  <depend>rclpy</depend>
  <depend>lifecycle_msgs</depend>
  <depend>std_msgs</depend>
  <depend>custom_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>lifecycle</test_depend>
  <test_depend>ros_testing</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
